user@laptop-wire
    mkdir -p build
        gcc -O3 -Wpedantic -Wall -Wextra -Wvla -Werror -g -std=c11 -Wall -Werror -fpic -std=gnu99 -shared src/fzf.c -o build/libfzf.so
        src/fzf.c:31:31: error: ISO C does not allow extra ‘;’ outside of a function [-Werror=pedantic]
           31 |   gen_simple_slice(name, type);                                                \
              |                               ^
        src/fzf.c:36:1: note: in expansion of macro ‘gen_slice’
           36 | gen_slice(i16, int16_t);
              | ^~~~~~~~~
        src/fzf.c:36:24: error: ISO C does not allow extra ‘;’ outside of a function [-Werror=pedantic]
           36 | gen_slice(i16, int16_t);
              |                        ^
        src/fzf.c:37:31: error: ISO C does not allow extra ‘;’ outside of a function [-Werror=pedantic]
           37 | gen_simple_slice(i32, int32_t);
              |                               ^
        src/fzf.c:31:31: error: ISO C does not allow extra ‘;’ outside of a function [-Werror=pedantic]
           31 |   gen_simple_slice(name, type);                                                \
              |                               ^
        src/fzf.c:38:1: note: in expansion of macro ‘gen_slice’
           38 | gen_slice(str, const char);
              | ^~~~~~~~~
        src/fzf.c:38:27: error: ISO C does not allow extra ‘;’ outside of a function [-Werror=pedantic]
           38 | gen_slice(str, const char);
              |                           ^
        src/fzf.c: In function ‘trailing_whitespaces’:
        src/fzf.c:87:36: error: comparison of unsigned expression in ‘>= 0’ is always true [-Werror=type-limits]
           87 |   for (size_t i = str->size - 1; i >= 0; i--) {
              |                                    ^~
        src/fzf.c: In function ‘is_ascii’:
        src/fzf.c:369:34: error: unused parameter ‘runes’ [-Werror=unused-parameter]
          369 | static bool is_ascii(const char *runes, size_t size) {
              |                      ~~~~~~~~~~~~^~~~~
        src/fzf.c:369:48: error: unused parameter ‘size’ [-Werror=unused-parameter]
          369 | static bool is_ascii(const char *runes, size_t size) {
              |                                         ~~~~~~~^~~~
        src/fzf.c: In function ‘fzf_fuzzy_match_v1’:
        src/fzf.c:492:16: error: comparison of integer expressions of different signedness: ‘int32_t’ {aka ‘int’} and ‘size_t’ {aka ‘long unsigned int’} [-Werror=sign-compare]
          492 |       if (pidx == M) {
              |                ^~
        src/fzf.c:464:66: error: unused parameter ‘slab’ [-Werror=unused-parameter]
          464 |                                 fzf_position_t *pos, fzf_slab_t *slab) {
              |                                                      ~~~~~~~~~~~~^~~~
        src/fzf.c: In function ‘fzf_fuzzy_match_v2’:
        src/fzf.c:739:22: error: comparison of integer expressions of different signedness: ‘size_t’ {aka ‘long unsigned int’} and ‘int32_t’ {aka ‘int’} [-Werror=sign-compare]
          739 |       if (i > 0 && j >= f.data[i]) {
              |                      ^~
        src/fzf.c:742:13: error: comparison of integer expressions of different signedness: ‘size_t’ {aka ‘long unsigned int’} and ‘int32_t’ {aka ‘int’} [-Werror=sign-compare]
          742 |       if (j > f.data[i]) {
              |             ^
        src/fzf.c: In function ‘fzf_exact_match_naive’:
        src/fzf.c:772:69: error: unused parameter ‘slab’ [-Werror=unused-parameter]
          772 |                                    fzf_position_t *pos, fzf_slab_t *slab) {
              |                                                         ~~~~~~~~~~~~^~~~
        src/fzf.c: In function ‘fzf_prefix_match’:
        src/fzf.c:836:64: error: unused parameter ‘slab’ [-Werror=unused-parameter]
          836 |                               fzf_position_t *pos, fzf_slab_t *slab) {
              |                                                    ~~~~~~~~~~~~^~~~
        src/fzf.c: In function ‘fzf_suffix_match’:
        src/fzf.c:882:12: error: comparison of unsigned expression in ‘< 0’ is always false [-Werror=type-limits]
          882 |   if (diff < 0) {
              |            ^
        src/fzf.c:871:64: error: unused parameter ‘slab’ [-Werror=unused-parameter]
          871 |                               fzf_position_t *pos, fzf_slab_t *slab) {
              |                                                    ~~~~~~~~~~~~^~~~
        src/fzf.c: In function ‘fzf_equal_match’:
        src/fzf.c:908:63: error: unused parameter ‘slab’ [-Werror=unused-parameter]
          908 |                              fzf_position_t *pos, fzf_slab_t *slab) {
              |                                                   ~~~~~~~~~~~~^~~~
        src/fzf.c: In function ‘fzf_parse_pattern’:
        src/fzf.c:993:65: error: unused parameter ‘normalize’ [-Werror=unused-parameter]
          993 | fzf_pattern_t *fzf_parse_pattern(fzf_case_types case_mode, bool normalize,
              |                                                                 ^
        cc1: all warnings being treated as errors
        make: *** [Makefile:24: build/libfzf.so] Error 1

